# genkit

./: README.md
.github/ISSUE_TEMPLATE/: rs-runtime-bug-report.md
js/core/src/: reflection.ts
js/genkit/tests/: prompts_test.ts
js/plugins/mcp/: README.md  package.json
js/plugins/mcp/src/: server.ts
js/plugins/mcp/src/client/: client.ts  host.ts
js/plugins/mcp/src/util/: prompts.ts  resource.ts  tools.ts
js/plugins/mcp/tests/: server_test.ts
rs/: .gitignore  Cargo.toml  README.md  TODO.md
rs/ai/: Cargo.toml
rs/ai/src/: chat.rs  check_operation.rs  document.rs  embedder.rs  evaluator.rs  extract.rs  index.rs  lib.rs  message.rs  model.rs  prompt.rs  reranker.rs  resource.rs  retriever.rs  session.rs  tool.rs  types.rs
rs/ai/src/formats/: array.rs  enum.rs  json.rs  jsonl.rs  mod.rs  text.rs  types.rs
rs/ai/src/generate/: action.rs  chunk.rs  mod.rs  resolve_tool_requests.rs  response.rs
rs/ai/src/model/: middleware.rs
rs/ai/src/testing/: mod.rs  model_tester.rs
rs/ai/tests/: document_test.rs  extract_test.rs  helpers.rs  prompt_test.rs  tool_test.rs
rs/ai/tests/formats/: array_test.rs  enum_test.rs  formats_test.rs  json_test.rs  jsonl_test.rs  mod.rs  text_test.rs
rs/ai/tests/generate/: chunk_test.rs  generate.rs  generate_test.rs  generate_test_basic.rs  generate_test_e2e.rs  response_test.rs
rs/ai/tests/message/: message_test.rs
rs/ai/tests/model/: middleware_augment_with_context_test.rs  middleware_simulate_constrained_generation_test.rs  middleware_test.rs  middleware_test_augment_with_context.rs  middleware_test_simulate_constrained_generation.rs  middleware_test_simulate_system_prompt.rs  middleware_test_validate_support.rs  middleware_validate_support_test.rs
rs/ai/tests/prompt/: _partial.prompt  docs_fn_test.rs  prompt_docs_fn_test.rs  prompt_fn_test.rs  prompt_helpers.rs  prompt_helpers_test.rs  prompt_messages_fn_test.rs  prompt_no_fn_test.rs  prompt_prompt_fn_test.rs  prompt_system_fn_test.rs  prompt_test.rs  prompt_test_docs_fn_test.rs  prompt_test_helpers.rs  prompt_test_messages_fn_test.rs  prompt_test_no_fn_test.rs  prompt_test_prompt_fn_test.rs  prompt_test_system_fn_test.rs  test.prompt
rs/ai/tests/reranker/: reranker_test.rs
rs/ai/tests/resource/: resource_test.rs
rs/core/: Cargo.toml
rs/core/src/: action.rs  async_utils.rs  background_action.rs  context.rs  error.rs  flow.rs  internals.rs  lib.rs  logging.rs  plugin.rs  reflection.rs  registry.rs  runtime.rs  schema.rs  status.rs  telemetry.rs  tracing.rs  utils.rs
rs/core/src/tracing/: exporter.rs  instrumentation.rs  types.rs
rs/core/tests/: action_test.rs  async_test.rs  background_action_test.rs  context_test.rs  flow_test.rs  registry_test.rs  schema_registry_test.rs  schema_test.rs  utils.rs
rs/genkit/: Cargo.toml
rs/genkit/src/: beta.rs  client.rs  common.rs  context.rs  embedder.rs  error.rs  extract.rs  flow.rs  formats.rs  helpers.rs  lib.rs  logging.rs  middleware.rs  model.rs  plugin.rs  prompt.rs  registry.rs  retriever.rs  schema.rs  testing.rs  tool.rs  tracing.rs
rs/genkit/src/beta/: client.rs  genkit_beta.rs
rs/genkit/src/evaluator/: mod.rs
rs/genkit/src/reranker/: mod.rs
rs/genkit/src/tests/: chat_test.rs  client_test.rs  embed_test.rs  evaluate_test.rs  flow_test.rs  formats_test.rs  generate_test.rs  helpers.rs  mod.rs  prompts_test.rs  retriever_test.rs  session_test.rs
rs/genkit/tests/: chat_preamble_test.rs  chat_test.rs  chat_test_preamble.rs  embed_test.rs  evaluate_test.rs  flow_test.rs  formats_test.rs  generate_config_test.rs  generate_explicit_model_test.rs  generate_long_running_test.rs  generate_test.rs  generate_test_config.rs  generate_test_explicit_model.rs  generate_test_long_running.rs  generate_test_streamings.rs  generate_test_tools.rs  generate_test_tools2.rs  generate_tools_test.rs  helpers.rs  mod.rs  prompt_test.bak  prompt_test.rs  prompts_define_prompt_default_model_test.rs  prompts_helpers.rs  prompts_test.rs  prompts_test_as_tool.rs  prompts_test_define_prompt2_default_model_ref_test.rs  prompts_test_define_prompt2_default_model_test.rs  prompts_test_define_prompt2_explicit_model_test.rs  prompts_test_define_prompt2_render_test.rs  prompts_test_define_prompt_default_model2_ref_test.rs  prompts_test_define_prompt_default_model2_test.rs  prompts_test_define_prompt_default_model_ref_test.rs  prompts_test_define_prompt_default_model_test.rs  prompts_test_define_prompt_explicit_model_test.rs  prompts_test_define_prompt_render_test.rs  prompts_test_prompt_test.rs  session_load_chat_test.rs  session_test.rs  session_test.rs.bak  (+4 more)
rs/plugins/dev-local-vectorstore/: Cargo.toml
rs/plugins/dev-local-vectorstore/src/: lib.rs
rs/plugins/dev-local-vectorstore/tests/: main.rs
rs/plugins/vertexai/: Cargo.toml
rs/plugins/vertexai/src/: common.rs  embedder.rs  lib.rs  list_models.rs  predict.rs
rs/plugins/vertexai/src/context_caching/: constants.rs  index.rs  mod.rs  types.rs  utils.rs
rs/plugins/vertexai/src/evaluation/: evaluation.rs  evaluator_factory.rs  index.rs  mod.rs  types.rs
rs/plugins/vertexai/src/model/: gemini.rs  helpers.rs  imagen.rs  mod.rs  types.rs
rs/plugins/vertexai/src/modelgarden/: anthropic.rs  index.rs  mistral.rs  mod.rs  model_garden.rs  openai_compatibility.rs  types.rs
rs/plugins/vertexai/tests/: gemini_test.rs
rs/plugins/vertexai/tests/context-caching/: utils_test.rs
rs/testapps/basic-gemini/: Cargo.toml  README.md
rs/testapps/basic-gemini/src/: main.rs
