[workspace]
members  = ["core", "ai", "genkit", "plugins/*", "testapps/*"]
resolver = "2"

[workspace.package]
authors    = ["Genkit Team <genkit-dev@google.com>"]
edition    = "2021"
license    = "Apache-2.0"
repository = "https://github.com/firebase/genkit"
version    = "0.1.0"

[workspace.dependencies]
# Async
async-trait  = "0.1"
futures      = "0.3"
futures-util = "0.3.31"
hyper        = { version = "1", features = ["full"] }
hyper-util   = { version = "0.1.15", features = ["full"] }
tokio        = { version = "1.46", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util   = { version = "0.7" }

# Serialization
json5      = "0.4"
schemars   = "1.0"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Schema
jsonschema = "0.30.0"

# Tracing
opentelemetry      = { version = "0.30.0" }
opentelemetry_sdk  = { version = "0.30.0", features = ["rt-tokio"] }
tracing            = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow    = "1.0.98"
thiserror = "1.0"

# Other
base64           = "0.22.1"
bytes            = "1.10"
colored          = "3.0"
handlebars       = "6.3.2"
http-body-util   = "0.1.3"
log              = "0.4.27"
once_cell        = "1.21.3"
pin-project      = "1.1.10"
pin-project-lite = "0.2.16"
regex            = "1.11.1"
reqwest          = { version = "0.12.22", features = ["blocking", "json", "stream"] }
rstest           = "0.25.0"
rstest_macros    = "0.25.0"
strum            = { version = "0.27", features = ["strum_macros", "derive"] }
strum_macros     = "0.27"
uritemplate      = "0.1"
uuid             = { version = "1.17", features = ["v4", "serde"] }

# For testing
tokio-test = "0.4"
