[package]
authors.workspace    = true
description          = "Genkit AI framework generative AI APIs."
edition.workspace    = true
license.workspace    = true
name                 = "genkit-ai"
repository.workspace = true
version.workspace    = true

[dependencies]
# Local Genkit dependencies
genkit-core = { path = "../core", version = "0.1.0" }

# Async runtime
async-trait.workspace = true
futures.workspace     = true
tokio.workspace       = true

# Serialization and Deserialization
json5.workspace      = true
schemars.workspace   = true
serde.workspace      = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Other utilities
base64.workspace        = true
colored.workspace       = true
futures-util.workspace  = true
handlebars.workspace    = true
jsonschema.workspace    = true
regex.workspace         = true
reqwest                 = { workspace = true, features = ["json"] }
rstest.workspace        = true
rstest_macros.workspace = true
strum.workspace         = true
strum_macros.workspace  = true
tokio-stream.workspace  = true
uritemplate.workspace   = true
uuid.workspace          = true

[dev-dependencies]
tokio-test.workspace = true

[[test]]
name = "chunk_test"
path = "tests/generate/chunk_test.rs"

[[test]]
name = "extract_test"
path = "tests/extract_test.rs"

[[test]]
name = "formats_test"
path = "tests/formats/formats_test.rs"

[[test]]
name = "message_test"
path = "tests/message/message_test.rs"

[[test]]
name = "prompt_test"
path = "tests/prompt/prompt_test.rs"

[[test]]
name = "resource_test"
path = "tests/resource/resource_test.rs"

[[test]]
name = "document_test"
path = "tests/document_test.rs"

[[test]]
name = "model"
path = "tests/model/middleware_test.rs"

[[test]]
name = "generate_test"
path = "tests/generate/generate_test.rs"

[[test]]
name = "reranker_test"
path = "tests/reranker/reranker_test.rs"
