[package]
authors     = ["Genkit Team <genkit-dev@google.com>"]
description = "Genkit AI framework core libraries."
edition     = "2021"
license     = "Apache-2.0"
name        = "genkit-core"
repository  = "https://github.com/firebase/genkit"
version     = "0.1.0"

[dependencies]
# Async runtime
hyper      = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
tokio      = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }

# Serialization and Deserialization
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JSON Schema generation
jsonschema = "0.30"
schemars   = "1.0"

# Tracing and Telemetry
opentelemetry = { version = "0.30.0" } # For OpenTelemetry tracing APIs
opentelemetry_sdk = { version = "0.30.0", features = [
  "rt-tokio",
] } # SDK for OpenTelemetry
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# Others

anyhow           = "1.0.98"
futures          = "0.3"
futures-util     = "0.3.31"
http-body-util   = "0.1.3"
once_cell        = "1.21.3"
pin-project      = "1.1.10"
pin-project-lite = "0.2.16"
reqwest          = { version = "0.12.20", features = ["blocking", "json"] }
log = "0.4.27"

[dev-dependencies]
# For testing
tokio-test = "0.4"
