[package]
authors.workspace    = true
description          = "Genkit AI framework core libraries."
edition.workspace    = true
license.workspace    = true
name                 = "genkit-core"
repository.workspace = true
version.workspace    = true

[dependencies]
# Async runtime
hyper.workspace      = true
hyper-util.workspace = true
tokio.workspace      = true
tokio-util.workspace = true

# Serialization and Deserialization
serde.workspace      = true
serde_json.workspace = true

# JSON Schema generation
jsonschema.workspace = true
schemars.workspace   = true

# Tracing and Telemetry
opentelemetry.workspace      = true
opentelemetry_sdk.workspace  = true
tracing.workspace            = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true

# Async traits
async-trait.workspace = true

# Others

anyhow.workspace           = true
futures.workspace          = true
futures-util.workspace     = true
http-body-util.workspace   = true
log.workspace              = true
once_cell.workspace        = true
pin-project.workspace      = true
pin-project-lite.workspace = true
reqwest                    = { workspace = true, features = ["blocking", "json"] }
strum                      = { workspace = true, features = ["derive"] }
strum_macros.workspace     = true

[dev-dependencies]
tokio-test.workspace = true
