[package]
authors     = ["Genkit Team <genkit-dev@google.com>"]
description = "The Genkit AI Framework for Rust."
edition     = "2021"
license     = "Apache-2.0"
name        = "genkit"
readme      = "README.md"
repository  = "https://github.com/firebase/genkit"
version     = "0.1.0"

[dependencies]
# Local Genkit dependencies
genkit-ai   = { path = "../ai" }
genkit-core = { path = "../core" }

# Dependencies for top-level Genkit APIs and struct
async-trait  = "0.1.88"
bytes        = "1.10.1"
futures      = "0.3.31"
futures-util = "0.3.31"
once_cell    = "1.21.3"
reqwest      = "0.12.20"
schemars     = "1.0.3"
serde        = { version = "1.0.219", features = ["derive"] }
serde_json   = "1.0.140"
thiserror    = "1.0.69"
tokio        = { version = "1.45.1", features = ["full", "stream"] }
tokio-stream = "0.1.17"


# Optional Plugin Dependencies
genkit-dev-local-vectorstore = { path = "../plugins/dev-local-vectorstore", optional = true }
genkit-vertexai              = { path = "../plugins/vertexai", optional = true }


[features]
dev-local-vectorstore = ["dep:genkit-dev-local-vectorstore"]
vertexai              = ["dep:genkit-vertexai"]

[dev-dependencies]
tokio-test = "0.4.4"
