[package]
authors     = ["Genkit Team <genkit-dev@google.com>"]
description = "The Genkit AI Framework for Rust."
edition     = "2021"
license     = "Apache-2.0"
name        = "genkit"
readme      = "README.md"
repository  = "https://github.com/firebase/genkit"
version     = "0.1.0"

[dependencies]
# Local Genkit dependencies
genkit-ai   = { path = "../ai" }
genkit-core = { path = "../core" }

# Dependencies for top-level Genkit APIs and struct
async-trait       = "0.1"
bytes             = "1.10"
futures           = "0.3"
futures-util      = "0.3"
once_cell         = "1.21"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
reqwest           = { version = "0.12", features = ["stream"] }
schemars          = "1.0"
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"
thiserror         = "1.0"
tokio             = { version = "1.45", features = ["full"] }
tokio-stream      = "0.1"


# Optional Plugin Dependencies
# genkit-dev-local-vectorstore = { path = "../plugins/dev-local-vectorstore", optional = true }


[features]
# dev-local-vectorstore = ["dep:genkit-dev-local-vectorstore"]

[dev-dependencies]
tokio-test = "0.4.4"
