[package]
authors.workspace    = true
description          = "The Genkit AI Framework for Rust."
edition.workspace    = true
license.workspace    = true
name                 = "genkit"
readme               = "README.md"
repository.workspace = true
version.workspace    = true

[dependencies]
# Local Genkit dependencies
genkit-ai   = { path = "../ai", public = true, version = "0.1.0" }
genkit-core = { path = "../core", public = true, version = "0.1.0" }

# Dependencies for top-level Genkit APIs and struct
async-trait.workspace       = true
bytes.workspace             = true
futures.workspace           = true
futures-util.workspace      = true
once_cell.workspace         = true
opentelemetry_sdk.workspace = true
reqwest                     = { workspace = true, features = ["stream"] }
rstest.workspace            = true
rstest_macros.workspace     = true
schemars.workspace          = true
serde.workspace             = true
serde_json.workspace        = true
thiserror.workspace         = true
tokio.workspace             = true
tokio-stream.workspace      = true


# Optional Plugin Dependencies
# genkit-dev-local-vectorstore = { path = "../plugins/dev-local-vectorstore", optional = true }


[features]
beta    = []
default = ["beta"]
# dev-local-vectorstore = ["dep:genkit-dev-local-vectorstore"]

[dev-dependencies]
tokio-test.workspace = true
