[package]
description = "Genkit development local vector store plugin."
edition     = "2021"
license     = "Apache-2.0"
name        = "genkit-plugins-dev-local-vectorstore"
repository  = "https://github.com/firebase/genkit"
version     = "0.1.0"

[dependencies]
genkit-ai   = { path = "../../ai" }
genkit-core = { path = "../../core" }

async-trait           = "0.1"
log                   = "0.4"
md5                   = "0.8.0"
ndarray               = "0.16.1"
once_cell             = "1.21.3"
schemars              = { version = "1.0", features = ["derive"] }
semanticsimilarity_rs = "0.1.1"
serde                 = { version = "1.0", features = ["derive"] }
serde_json            = "1.0"
thiserror             = "2.0"
tokio                 = { version = "1", features = ["fs", "io-util"] }
uuid                  = { version = "1.17.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile   = "3"
tokio-test = "0.4"
