[package]
authors.workspace    = true
description          = "Genkit development local vector store plugin."
edition.workspace    = true
license.workspace    = true
name                 = "genkit-plugins-dev-local-vectorstore"
repository.workspace = true
version.workspace    = true

[dependencies]
genkit-ai   = { path = "../../ai", version = "0.1.0" }
genkit-core = { path = "../../core", version = "0.1.0" }

async-trait.workspace = true
log.workspace         = true
md5                   = "0.8.0"
ndarray               = "0.16.1"
once_cell.workspace   = true
schemars              = { workspace = true, features = ["derive"] }
semanticsimilarity_rs = "0.1.1"
serde.workspace       = true
serde_json.workspace  = true
thiserror.workspace   = true
tokio                 = { workspace = true, features = ["fs", "io-util"] }
uuid.workspace        = true

[dev-dependencies]
tempfile             = "3"
tokio-test.workspace = true
