[package]
description = "Genkit Vertex AI plugin."
edition     = "2021"
license     = "Apache-2.0"
name        = "genkit-vertexai"
repository  = "https://github.com/firebase/genkit"
version     = "0.1.0"

[dependencies]
async-trait = "0.1"
base64      = "0.22"
gcp_auth    = "0.12"
genkit-ai   = { path = "../../ai" }
genkit-core = { path = "../../core" }
log         = "0.4"
reqwest     = { version = "0.12", features = ["json"] }
schemars    = "1.0.3"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
sha2        = "0.10.8"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
thiserror   = "1.0"

[dev-dependencies]
anyhow     = "1.0"
tokio      = { version = "1", features = ["full"] }
tokio-test = "0.4"
