[package]
authors.workspace    = true
description          = "Genkit Vertex AI plugin."
edition.workspace    = true
license.workspace    = true
name                 = "genkit-vertexai"
repository.workspace = true
version.workspace    = true

[dependencies]
async-trait.workspace = true
base64.workspace      = true
gcp_auth              = "0.12"
genkit-ai             = { path = "../../ai", version = "0.1.0" }
genkit-core           = { path = "../../core", version = "0.1.0" }
log.workspace         = true
reqwest               = { workspace = true, features = ["json"] }
schemars.workspace    = true
serde.workspace       = true
serde_json.workspace  = true
sha2                  = "0.10.9"
strum                 = { version = "0.27", features = ["derive"] }
strum_macros          = "0.27"
thiserror.workspace   = true

[dev-dependencies]
anyhow.workspace     = true
tokio.workspace      = true
tokio-test.workspace = true
