[package]
edition = "2021"
name    = "basic-gemini"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow     = "1.0"
env_logger = "0.11"
genkit     = { path = "../../genkit" }
# genkit-google-ai = { path = "../../plugins/google-ai" }
genkit-vertexai = { path = "../../plugins/vertexai" }
schemars        = "1.0"
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
tokio           = { version = "1", features = ["full"] }
